[changelog] versioning introduced

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,1 +1,5 @@
-v0.9.0
+## [0.9.0] - 2015-11-12
+### Changed
+- Initial version
+
+[0.9.0]: https://github.com/krzysztof-jusiak/di/compare/v0.8.0...v0.9.0
